Created initial models and BusinessModel wrapper classes.
Created FormulationEditView and ViewModel

--- a/FormulationEditor/FormulationEditor.Model/FormulationEditor.Model.csproj
+++ b/FormulationEditor/FormulationEditor.Model/FormulationEditor.Model.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Formulation.cs" />
+    <Compile Include="FormulationIngredient.cs" />
+    <Compile Include="Ingredient.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
