--- a/FormulationEditor/FormulationEditor.Model/FormulationEditor.Model.csproj
+++ b/FormulationEditor/FormulationEditor.Model/FormulationEditor.Model.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Formulation.cs" />
     <Compile Include="FormulationIngredient.cs" />
     <Compile Include="Ingredient.cs" />
+    <Compile Include="LookupItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
