Created new IngredientPrice class, Interface, and Repository
Created Ingredient Pricing Web API for hosting prices.

Added logic to the startup to load prices.

--- a/FormulationEditor/FormulationEditor.Model/FormulationEditor.Model.csproj
+++ b/FormulationEditor/FormulationEditor.Model/FormulationEditor.Model.csproj
@@ -43,7 +43,9 @@
   <ItemGroup>
     <Compile Include="Formulation.cs" />
     <Compile Include="FormulationIngredient.cs" />
+    <Compile Include="IIngredientPrice.cs" />
     <Compile Include="Ingredient.cs" />
+    <Compile Include="IngredientPrice.cs" />
     <Compile Include="LookupItem.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
