--- a/FormulationEditor/FormulationEditor.WPF/FormulationEditor.WPF.csproj
+++ b/FormulationEditor/FormulationEditor.WPF/FormulationEditor.WPF.csproj
@@ -38,11 +38,17 @@
     <Reference Include="Autofac, Version=4.9.2.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
       <HintPath>..\packages\Autofac.4.9.2\lib\net45\Autofac.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=12.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.12.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="Prism, Version=7.1.0.431, Culture=neutral, PublicKeyToken=40ee6c3a2184dc59, processorArchitecture=MSIL">
       <HintPath>..\packages\Prism.Core.7.1.0.431\lib\net45\Prism.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http.Formatting, Version=5.2.7.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <HintPath>..\packages\Microsoft.AspNet.WebApi.Client.5.2.7\lib\net45\System.Net.Http.Formatting.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -72,7 +78,9 @@
     <Compile Include="Data\Repositories\IFormulationIngredientRepository.cs" />
     <Compile Include="Data\Repositories\IFormulationRepository.cs" />
     <Compile Include="Data\Repositories\IGenericRepository.cs" />
+    <Compile Include="Data\Repositories\IIngredientPriceRepository.cs" />
     <Compile Include="Data\Repositories\IIngredientRepository.cs" />
+    <Compile Include="Data\Repositories\IngredientPriceRepository.cs" />
     <Compile Include="Data\Repositories\IngredientRepository.cs" />
     <Compile Include="PropertyChangedBase.cs" />
     <Compile Include="Startup\BootStrapper.cs" />
